// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonContext other 1`] = `
HTMLCollection [
  <button
    class="t-button t-button--type-primary t--size-m t-button--icon-l"
  />,
  <button
    class="t-button t-button--type-info t--size-m t-button--icon-l"
  />,
]
`;

exports[`ButtonContext size 1`] = `
<div
  class="t-button-group"
  role="group"
>
  <button
    class="t-button t-button--type-default t--size-sm t-button--icon-l"
  />
  <button
    class="t-button t-button--type-default t--size-sm t-button--icon-l"
  />
</div>
`;

exports[`ButtonContext size 2`] = `
HTMLCollection [
  <button
    class="t-button t-button--type-default t--size-lg t-button--icon-l"
  />,
  <button
    class="t-button t-button--type-default t--size-sm t-button--icon-l"
  />,
]
`;
